<resources>
    <string name="app_name">MySqliteDatabaseDemo10</string>
    <string name="password">Password :</string>
    <string name="username">Username :</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="uname">Username :</string>
    <string name="email">Email :</string>
    <string name="name">Name :</string>
    <string name="hello_world">Hello World!!!</string>
</resources>