<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".SignupActivity">


    <EditText
        android:id="@+id/nameEditTextID"
        android:textSize="20sp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/signUpEmailEditTextID"
        android:textSize="20sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/signUpUserNameEditTextID"
        android:textSize="20sp"
        android:hint="@string/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/signUpPasswordEditTextID"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/signUpBtnID"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>