<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/username"
            android:textSize="23sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/signInUserEdtTxtID"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/password"
            android:textSize="23sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/signInPasswordEdtTxtID"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/signInBtnID"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signUpHereBtnID"
        android:text="@string/sign_up_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>